queue example working

--- a/.env.example
+++ b/.env.example
@@ -15,20 +15,22 @@ DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
+
+
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.gmail.com
+MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=587
-MAIL_USERNAME=riyad.for.test
-MAIL_PASSWORD=01919448787
-MAIL_ENCRYPTION=tls
+MAIL_USERNAME=95a107e263bf7e
+MAIL_PASSWORD=09a86c3ae7da71
+MAIL_ENCRYPTION=
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
