--- a/.env.example
+++ b/.env.example
@@ -15,9 +15,11 @@ DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
+
+
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
