--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "date-fns": "^1.30.1",
         "vue-router": "^3.0.6",
         "vuetify": "^1.5.14"
     }
