--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "date-fns": "^1.30.1",
+        "vue-resource": "^1.5.1",
         "vue-router": "^3.0.6",
         "vuetify": "^1.5.14"
     }
